# molcpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  log  test  toolchain.sh  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
bindgen/: main.py
bindgen/generator/: __init__.py  ctype.py  ffi.py  functions.py  types.py
bindgen/generator/javascript/: __init__.py  constants.py  convert.py  ffi.py
bindgen/generator/python/: __init__.py  constants.py  convert.py  ffi.py
bindings/c/include/: space.h  types.h
bindings/c/src/: space.cpp
bindings/python/: CMakeLists.txt  space.cpp
cmake/: dev-mode.cmake  docs.cmake  install-config.cmake  install-rules.cmake  rel-mode.cmake  variables.cmake
docs/pages/: build.md  dev.md
include/: algo.h  approx.h  approx.hpp  atom.h  bond.h  box.h  cell.h  cellList.h  celllist.h  cgmodel.h  config.h  connectivity.h  dict.h  element.h  error.h  forcefield.h  frame.h  geom.hpp  graph.h  io_utils.h  item.h  itemtype.h  linalg.hpp  mat3.h  mat3.hpp  molcpp.h  molcpp.hpp  molecule.h  mperror.h  neighborlist.h  parsmart.h  property.h  sorted_set.h  system.h  topology.h  trajectory.h  types.hpp  updater.h  utils.h  vec3.h  (+1 more)
include/io/: loader.h
include/minimizer/: min.h
include/modeller/: sarw.h
include/molcore/: molcore.hpp  space.hpp
include/molcpp/: block.hpp  block_map.hpp  box.hpp  compute.hpp  frame.hpp  molcpp.hpp  nblist.hpp  space.hpp  struct.hpp  topology.hpp  types.hpp
include/molcpp/capi/: space.h  types.h  utils.hpp
include/potentials/: base.h  bond_harmonic.h
source/: CMakeLists.txt  molcore.cpp  nblist.cpp  space.cpp  struct.cpp  topology.cpp
source/capi/: space.cpp
src/: CMakeLists.txt  algo.cpp  atom.cpp  bond.cpp  box.cpp  cell.cpp  cellList.cpp  celllist.cpp  cgmodel.cpp  connectivity.cpp  element.cpp  forcefield.cpp  frame.cpp  graph.cpp  item.cpp  itemtype.cpp  linalg.cpp  molecule.cpp  neighborList.cpp  neighborlist.cpp  parsmart.cpp  topology.cpp  trajectory.cpp  updater.cpp
src/io/: loader.cpp
src/modeller/: sarw.cpp
src/potentials/: bond_harmonic.cpp
test/: CMakeLists.txt
test/source/: molcore_test.cpp  test_export.cpp  test_space.cpp  test_struct.cpp  test_topology.cpp
tests/: CMakeLists.txt  test_algo.cpp  test_approx.cpp  test_atom.cpp  test_bond.cpp  test_box.cpp  test_cell.cpp  test_cellList.cpp  test_celllist.cpp  test_dict.cpp  test_element.cpp  test_forcefield.cpp  test_frame.cpp  test_geom.cpp  test_graph.cpp  test_item.cpp  test_itemtype.cpp  test_mat3.cpp  test_parsmart.cpp  test_property.cpp  test_topology.cpp  test_trajectory.cpp  test_utils.h  test_vec3.cpp  utils.h
tests/io/: test_loader.cpp
tests/src/: test_block.cpp  test_block_map.cpp  test_box.cpp  test_frame.cpp  test_msd.cpp  test_types.cpp
wrappers/js/: CMakeLists.txt  bind_box.cpp  bind_vec3.cpp
